src/include/musicxx_extern_plugin_api.h

/* ==================== 跨边界字符串 ==================== */

/// 只读借用字符串视图 (指向调用方内存, UTF-8, 不要求 NUL 结尾)
typedef struct MusicxxExternPluginStringView {
    const char* data;
    uint64_t    size;
} MusicxxExternPluginStringView;
/// 宿主堆分配字符串 (显式所有权: 由宿主分配, 调用方用 string_free 释放)
typedef struct MusicxxExternPluginString {
    char*    data; ///< 以 \0 结尾; 空串或未设置时为 NULL
    uint64_t size; ///< 字节数 (不含结尾 \0)
} MusicxxExternPluginString;
/// 宿主句柄 (不透明; 进程内单例)
typedef struct MusicxxExternPluginHost MusicxxExternPluginHost;
/// 事件唤醒回调 (原生事件入队时调用; 必须快速返回)
typedef int32_t(MUSICXX_EXTERN_PLUGIN_CALL* MusicxxExternPluginWakeFn)(void* user_data);
/* ==================== 宿主配置 ==================== */

typedef struct MusicxxExternPluginHostConfig {
    uint32_t struct_size; ///< == sizeof(MusicxxExternPluginHostConfig)

    MusicxxExternPluginStringView app_version;       ///< 应用版本 (如 "0.87.0")
    MusicxxExternPluginStringView platform;          ///< 平台标识 (windows/linux/macos/android/ios/ohos)
    MusicxxExternPluginStringView language;          ///< 语言代码 (如 "zh-cn")
    MusicxxExternPluginStringView user_plugin_dir;   ///< 用户插件目录 (绝对路径; 可为空)
    MusicxxExternPluginStringView builtin_plugin_dir;///< 随包插件目录 (绝对路径; 可为空)
    MusicxxExternPluginStringView data_dir;          ///< 插件私有数据根目录 (绝对路径; 可为空)
    MusicxxExternPluginStringView log_dir;           ///< 日志目录 (绝对路径; 可为空)

    int32_t  log_level;          ///< 0 trace .. 4 error
    int32_t  flags;              ///< MUSICXX_EXTERN_PLUGIN_FLAG_*
    uint32_t event_queue_capacity; ///< 0 = 默认 16384
} MusicxxExternPluginHostConfig;
/// 资源与耗时统计快照 (scope_json = NULL 取全部)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_stats(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* scope_json,
    MusicxxExternPluginString*           out_json,
    MusicxxExternPluginString*           log
);
/// 统计采集配置 ({"enable":bool,"jsHeapSampleMs":int,"observeEvents":bool})
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_stats_config(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* cfg_json,
        MusicxxExternPluginString*           log
    );