lib/src/bindings_generated.dart


  /// 资源与耗时统计快照 (scope_json = NULL 取全部)
  int musicxx_extern_plugin_stats(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> scope_json,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_stats(h, scope_json, out_json, log);
  }

  late final _musicxx_extern_plugin_statsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_stats');
  late final _musicxx_extern_plugin_stats = _musicxx_extern_plugin_statsPtr
      .asFunction<
        int Function(
          ffi.Pointer<MusicxxExternPluginHost>,
          ffi.Pointer<MusicxxExternPluginStringView>,
          ffi.Pointer<MusicxxExternPluginString>,
          ffi.Pointer<MusicxxExternPluginString>,
        )
      >();

  /// 统计采集配置 ({"enable":bool,"jsHeapSampleMs":int,"observeEvents":bool})
  int musicxx_extern_plugin_stats_config(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> cfg_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_stats_config(h, cfg_json, log);
  }

  late final _musicxx_extern_plugin_stats_configPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_stats_config');
  late final _musicxx_extern_plugin_stats_config =
      _musicxx_extern_plugin_stats_configPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();
}

/// 只读借用字符串视图 (指向调用方内存, UTF-8, 不要求 NUL 结尾)
final class MusicxxExternPluginStringView extends ffi.Struct {
  external ffi.Pointer<ffi.Char> data;

  @ffi.Uint64()
  external int size;
}

/// 宿主堆分配字符串 (显式所有权: 由宿主分配, 调用方用 string_free 释放)
final class MusicxxExternPluginString extends ffi.Struct {
  /// < 以 \0 结尾; 空串或未设置时为 NULL
  external ffi.Pointer<ffi.Char> data;

  /// < 字节数 (不含结尾 \0)
  @ffi.Uint64()
  external int size;
}

final class MusicxxExternPluginHost extends ffi.Opaque {}

final class MusicxxExternPluginHostConfig extends ffi.Struct {
  /// < == sizeof(MusicxxExternPluginHostConfig)
  @ffi.Uint32()
  external int struct_size;

  /// < 应用版本 (如 "0.87.0")
  external MusicxxExternPluginStringView app_version;

  /// < 平台标识 (windows/linux/macos/android/ios/ohos)
  external MusicxxExternPluginStringView platform;

  /// < 语言代码 (如 "zh-cn")
  external MusicxxExternPluginStringView language;

  /// < 用户插件目录 (绝对路径; 可为空)
  external MusicxxExternPluginStringView user_plugin_dir;

  /// < 随包插件目录 (绝对路径; 可为空)
  external MusicxxExternPluginStringView builtin_plugin_dir;

  /// < 插件私有数据根目录 (绝对路径; 可为空)
  external MusicxxExternPluginStringView data_dir;

  /// < 日志目录 (绝对路径; 可为空)
  external MusicxxExternPluginStringView log_dir;

  /// < 0 trace .. 4 error
  @ffi.Int32()
  external int log_level;

  /// < MUSICXX_EXTERN_PLUGIN_FLAG_*
  @ffi.Int32()
  external int flags;

  /// < 0 = 默认 16384
  @ffi.Uint32()
  external int event_queue_capacity;
}

/// 事件唤醒回调 (原生事件入队时调用; 必须快速返回)
typedef MusicxxExternPluginWakeFn =
    ffi.Pointer<ffi.NativeFunction<MusicxxExternPluginWakeFnFunction>>;
typedef MusicxxExternPluginWakeFnFunction =
    ffi.Int32 Function(ffi.Pointer<ffi.Void> user_data);
typedef DartMusicxxExternPluginWakeFnFunction =
    int Function(ffi.Pointer<ffi.Void> user_data);
